samples/_failures_safe/1761512708_aeb57e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9a0c830.c: In function ‘print_high_severity_entries’:
./samples/SAFE/__tmp_c9a0c830.c:145:22: error: expected declaration or statement at end of input
  145 |         const struct LogEntry *entry = &analyzer->entries[i];
      |                      ^~~~~~~~
./samples/SAFE/__tmp_c9a0c830.c:145:22: error: expected declaration or statement at end of input
